--- a/optimus css/src/index.html
+++ b/optimus css/src/index.html
@@ -1,13 +1,28 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="keywords" content="">
+  <meta name="Author" content="Ibrahim Mohamed;">
+  <meta property="og:title" content="OPTIMUS FACILITIES MANAGEMENT"/>
+  <meta property="og:image" content="https://optimusfm.co/assets/images/optimusLogo2.png"/>
+    <meta property="og:url" content="https://optimusfm.co/home"/>
+    <meta property="og:description"
+    content="Optimus FM is a fully integrated, first of its kind in Kuwait, facility management company. We cater to all our client’s requirements by being a one stop shop provider to all the hard and soft facilities management services. Optimus FM’s methodology is centered around the development of long-term strategic partnerships; an approach that will help ensure our ultimate goal of enhancing and optimizing our client’s overall facility management experience. We work with the intent to provide the best quality facilities consultancy and management services."/>
   <meta charset="utf-8">
+  <meta name="Description" CONTENT="Optimus FM is a fully integrated, first of its kind in Kuwait, facility management company. We cater to all our client’s requirements by being a one stop shop provider to all the hard and soft facilities management services. Optimus FM’s methodology is centered around the development of long-term strategic partnerships; an approach that will help ensure our ultimate goal of enhancing and optimizing our client’s overall facility management experience. We work with the intent to provide the best quality facilities consultancy and management services.">
+  <meta name="google-site-verification" content="+nxGUDJ4QpAZ5l9Bsjdi102tLVC21AIh5d1Nl23908vVuFHs34="/>
+  <meta name="robots" content="noindex,nofollow">
   <title>OPTIMUS FACILITIES MANAGEMENT</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300&display=swap" rel="stylesheet">
+  <script
+src=”https://code.jquery.com/jquery-3.4.1.js"
+integrity=”sha256–2z0P7MLoyxByUtvAk/xjkmindefS4auh4Pfzbm7y6g0=”
+crossorigin=”anonymous”>
+</script>
 </head>
 <body>
   <app-root></app-root>
